2011-04-26  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-log-list-fetch-all bound to `z F'

2011-04-24  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Use `libxml-parse-xml-region' if exists.

2011-03-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: advice problem.

2011-03-30  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Create `uninstall' target

2011-03-29  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: More elegant fancy mode-line.

2011-03-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.11

2011-03-08  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: fsvn-log-list-mark-searched -> fsvn-log-list-mark-regexp

	* Change: fsvn-log-list-isarch-history -> fsvn-log-list-sarch-history

	* Change: fsvn-log-list-isearch-text -> fsvn-log-list-search-regexp

2011-03-02  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Illegal key conventions.

	* Improvement: diff colorized local file.

2011-03-01  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Set default file name, when reading patch filename.

2011-02-25  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: Read url with revision.

	* Fix: fsvn-browse-goto-first-file

	* Add: fsvn-pkg.el and reconstruct install process for package.el (But Not works yet)

2011-02-24  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: error to `quit' signal. If canceled by user.

	* Change: Suppress illegal conventions command message.

2011-02-20  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Diff with current directory in browse buffer (bound to `= D')

2011-02-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.10

2011-02-18  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: set UUID in all buffers.

	* Fix: Remove calling font-lock function as long as i can.

2011-02-17  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
